<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    tools:context="pl.rmakowiecki.eventhub.ui.screen_auth.AuthActivity">

    <com.flaviofaria.kenburnsview.KenBurnsView
        android:id="@+id/ken_burns_header_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:src="@drawable/mudzin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_height"
            android:layout_marginLeft="@dimen/text_input_side_margin"
            android:layout_marginRight="@dimen/text_input_side_margin"
            android:layout_marginTop="@dimen/first_text_input_margin_top">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_email"
                style="@style/InputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_input_hint_email"
                android:inputType="textEmailAddress|textCapCharacters" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_height"
            android:layout_marginLeft="@dimen/text_input_side_margin"
            android:layout_marginRight="@dimen/text_input_side_margin"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_password"
                style="@style/InputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_input_hint_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_repeat_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_height"
            android:layout_marginLeft="@dimen/text_input_side_margin"
            android:layout_marginRight="@dimen/text_input_side_margin"
            android:visibility="gone"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_repeat_password"
                style="@style/InputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_input_hint_repeat_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <pl.rmakowiecki.eventhub.ui.custom_view.ActionButton
            android:id="@+id/auth_action_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_button_height"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/standard_margin_large"
            app:enabled="false"
            app:button_shape="pill"
            app:default_color="@color/colorPrimary"
            app:failure_color="@color/failure_red"
            app:failure_icon="@drawable/icon_failure_action_button"
            app:inactive_button_alpha="0.5"
            app:success_color="@color/success_green"
            app:success_icon="@drawable/icon_success_action_button"
            app:text="@string/button_text_sign_in"
            app:text_color="@android:color/white" />

        <FrameLayout
            android:id="@+id/login_bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/registration_form_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:layout_margin="@dimen/standard_margin_large"
                android:text="@string/text_register_email" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/image_view_login_fb"
                    android:layout_width="@dimen/login_image_view_size"
                    android:layout_height="@dimen/login_image_view_size"
                    android:layout_margin="@dimen/standard_margin_small"
                    android:src="@drawable/fb_login_icon" />

                <ImageView
                    android:id="@+id/image_view_login_g"
                    android:layout_width="@dimen/login_image_view_size"
                    android:layout_height="@dimen/login_image_view_size"
                    android:layout_margin="@dimen/standard_margin_small"
                    android:src="@drawable/google_login_icon" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_margin="@dimen/standard_margin_large"
                android:text="@string/text_forgot_password" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>
