<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.rmakowiecki.eventhub.ui.screen_personalization.PersonalizationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.github.florent37.arclayout.ArcLayout
            android:id="@+id/arc_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            app:arc_cropDirection="cropInside"
            app:arc_height="@dimen/layout_arc_height">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_marginTop="64dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personalization_welcome_1"
                    android:textColor="@android:color/white"
                    android:textSize="40sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personalization_welcome_2"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_margin_medium"
                    android:text="@string/personalization_welcome_3"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

            </LinearLayout>

        </com.github.florent37.arclayout.ArcLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_displayed_name"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="@dimen/text_input_side_margin"
                android:layout_marginRight="@dimen/text_input_side_margin"
                android:layout_marginTop="44dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_text_email"
                    style="@style/InputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/personalization_user_name_hint"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <pl.rmakowiecki.eventhub.ui.custom_view.ActionButton
                android:id="@+id/personalization_action_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/action_button_height"
                android:layout_margin="@dimen/standard_margin_large"
                android:layout_marginBottom="32dp"
                app:button_shape="pill"
                app:default_color="@color/colorAccent"
                app:enabled="false"
                app:failure_color="@color/failure_red"
                app:failure_icon="@drawable/icon_failure_action_button"
                app:inactive_button_alpha="0.5"
                app:success_color="@color/success_green"
                app:success_icon="@drawable/icon_success_action_button"
                app:text="Zapisz"
                app:text_color="@android:color/white" />

        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_profile_image_view"
            android:layout_width="@dimen/user_profile_image_height"
            android:layout_height="@dimen/user_profile_image_height"
            android:layout_marginTop="@dimen/user_profile_image_margin"
            android:scaleType="centerCrop"
            android:src="@drawable/blank_profile"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="@dimen/user_profile_image_border_width" />

        <FrameLayout
            android:layout_width="@dimen/user_add_profile_image_size"
            android:layout_height="@dimen/user_add_profile_image_size"
            android:layout_marginTop="@dimen/user_profile_image_margin"
            android:layout_gravity="top|right">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:civ_border_width="@dimen/user_profile_image_border_width"
                app:civ_border_color="@android:color/white"
                android:src="@color/colorAccent" />

            <ImageView
                android:id="@+id/add_image_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:src="@drawable/ic_mode_edit_white_24dp" />
        </FrameLayout>
    </FrameLayout>
</FrameLayout>
